Fix Overlay Height On Mobile Devices

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
 .nft-image {
   margin-bottom: 1rem;
   position: relative;
+  display: inline-block;
   transition: all 0.5s ease;
   cursor: pointer;
 }
